# raminspect

./: Cargo.toml  README.md  build_blob.sh  x86-64-alloc-blob.asm
examples/: firefox_search.rs  replacemem.rs
kern_module/: Makefile
kern_module/src/: config.h  fops.h  raminspect.c  search.h
src/: ffi.rs  ioctl.rs  lib.rs
