[package]
name = "raminspect"
version = "0.2.1"
edition = "2021"

license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/PhilosophicalProgrammer/raminspect"
description = "Allows for the reading and writing of an arbitrary processes' memory on Linux systems."

[dependencies]
nix = { version = "0.26.2" }