[package]
name = "raminspect"
version = "0.3.1"
edition = "2021"

license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/PhilosophicalProgrammer/raminspect"
description = "Allows for the reading and writing of an arbitrary processes' memory on Linux systems."

[dependencies]
libc = "0.2.147"
libc_alloc = "1.0.5"